--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -11,14 +11,24 @@
   box-shadow: 0px 0px 10px 12px rgba(20, 20, 20, 0.2);
 }
 
-.left {
+.alignLeft {
   top: 3.7rem;
   left: 9.4rem;
 }
 
-.right {
+.alignRight {
   top: 3.7rem;
   right: -1rem;
+}
+
+.right {
+  top: 3.7rem;
+  right: 0;
+}
+
+.left {
+  top: 3.7rem;
+  left: 0;
 }
 
 .active {
