--- a/src/components/Stations/StationsList/StationsList.module.scss
+++ b/src/components/Stations/StationsList/StationsList.module.scss
@@ -1,7 +1,10 @@
 .list {
-  // padding-top: 8.9rem;
   display: grid;
   grid-template-columns: 13.3rem;
   grid-template-columns: repeat(auto-fit, minmax(13.3rem, 1fr));
   gap: 1.6rem;
+}
+
+.columns {
+  grid-template-columns: repeat(3, 1fr);
 }
