--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -5,6 +5,10 @@
   padding: 0 var(--spacing-1);
 }
 
+.main {
+  margin-bottom: 4.8rem;
+}
+
 .grid {
   display: grid;
   grid-template-rows: auto 1fr auto;
