--- a/src/components/UI/DynamicButton/DynamicButton.module.scss
+++ b/src/components/UI/DynamicButton/DynamicButton.module.scss
@@ -1,19 +1,3 @@
-.layout {
-  display: flex;
-  place-items: center;
-  gap: .2rem;
-
-  & .btnGrid {
-    border-radius: var(--border-radius-2) 0 0 var(--border-radius-2);
-    padding: var(--spacing-6) var(--spacing-5);
-  }
-
-  & .btnColumns {
-    border-radius: 0 var(--border-radius-2) var(--border-radius-2) 0;
-    padding: var(--spacing-6) var(--spacing-5);
-  }
-}
-
 .btn {
   display: flex;
   align-items: center;
@@ -25,14 +9,30 @@
   border-radius: var(--border-radius-2);
   transition: color var(--transition);
   color: var(--system-pure-white);
+  height: 4rem;
 
   & > svg {
     color: var(--text-night-trietary);
     transition: all var(--transition);
   }
 
+  &.btnWhite {
+
+    & > svg {
+      color: var(--system-pure-white);
+      transition: all var(--transition);
+    }
+  }
+
   &:hover {
     background: rgba(255, 255, 255, .1);
+  }
+
+  &:hover:not(.favorites) {
+    & > svg {
+      color: var(--system-pure-white);
+      opacity: .6;
+    }
   }
 
   &:focus {
@@ -40,11 +40,6 @@
   }
 }
 
-.activeLayout {
-  background: rgba(255, 255, 255, .1);
-
-  & > svg {
-    color: var(--system-pure-white);
-  }
-
+.iconLeft {
+  margin-right: .5rem;
 }
