--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -46,12 +46,12 @@
   --spacing-7: 1.6rem;
   --dark-primary: #141414;
   --transition: linear .1s;
-  --border-radius-1: 4px;
-  --border-radius-2: 8px;
-  --border-radius-3: 12px;
-  --border-radius-4: 16px;
-  --border-radius-5: 20px;
-  --border-radius-6: 24px;
+  --border-radius-1: .4rem;
+  --border-radius-2:.8rem;
+  --border-radius-3: 1.2rem;
+  --border-radius-4: 1.6rem;
+  --border-radius-5: 2rem;
+  --border-radius-6: 2.4rem;
 }
 
 html,
@@ -76,8 +76,6 @@ img {
 }
 
 body {
-  min-height: 100vh;
-  min-width: 100vw;
   line-height: 1.5;
   font-family: "Roboto", Verdana, sans-serif;
   font-optical-sizing: auto;
@@ -114,3 +112,10 @@ a {
   overflow-wrap: break-word;
   hyphens: auto;
 }
+
+// p {
+//   white-space: normal;
+//   overflow-wrap: break-word;
+//   hyphens: auto
+//     /* Автоматические переносы с дефисами */
+// }
