--- a/src/components/Podcasts/PodcastCard/PodcastCard.module.scss
+++ b/src/components/Podcasts/PodcastCard/PodcastCard.module.scss
@@ -1,92 +1,121 @@
 .card {
-  position: relative;
-  display: flex;
-  justify-content: start;
-  justify-content: start;
-  align-items: end;
-  height: 100%;
-  width: 100%;
-  aspect-ratio: 100/139;
-  border-radius: var(--border-radius-2);
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 26px;
-  color: var(--text-night-primary) !important;
+	position: relative;
+	display: flex;
+	justify-content: start;
+	justify-content: start;
+	align-items: end;
+	height: 100%;
+	width: 100%;
+	aspect-ratio: 100/139;
+	border-radius: var(--border-radius-2);
+	font-weight: 600;
+	font-size: 20px;
+	line-height: 26px;
+	color: var(--text-night-primary) !important;
 
+	&:hover {
+		& .imgBackground {
+			filter: grayscale(0);
+		}
 
-  &:hover {
-    & .imgBackground {
-      filter: grayscale(0);
-    }
-
-    & .blockSubscribe {
-      display: flex;
-    }
-  }
+		& .blockSubscribe {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
 }
 
 .blockText {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: start;
-  padding: 2rem 1.6rem 2rem 1.6rem;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+	display: flex;
+	flex-direction: column;
+	justify-content: end;
+	align-items: start;
+	padding: 2rem 1.6rem 2rem 1.6rem;
+	background: linear-gradient(
+		180deg,
+		rgba(0, 0, 0, 0) 0%,
+		rgba(0, 0, 0, 0.8) 100%
+	);
 }
 
 .textNew {
-  display: inline-block;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
-  color: var(--system-pure-white);
-  padding: .3rem .4rem;
-  background-color: #f91a3f;
-  border-radius: var(--border-radius-1);
-  text-transform: uppercase;
-  margin-bottom: .5rem;
+	display: inline-block;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	color: var(--system-pure-white);
+	padding: 0.3rem 0.4rem;
+	background-color: #f91a3f;
+	border-radius: var(--border-radius-1);
+	text-transform: uppercase;
+	margin-bottom: 0.5rem;
 }
 
 .imgBackground {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: var(--neutrals-700);
-  border-radius: var(--border-radius-2);
-  filter: grayscale(1);
-  transition: filter linear .2s;
-  z-index: -1;
+	position: absolute;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-color: var(--neutrals-700);
+	border-radius: var(--border-radius-2);
+	filter: grayscale(1);
+	transition: filter linear 0.2s;
+	z-index: -1;
 }
 
 .blockSubscribe {
-  position: absolute;
-  display: none;
-  top: 8px;
-  right: 8px;
+	position: absolute;
+	display: none;
+	top: 8px;
+	right: 8px;
+
+	&:hover {
+		& .textBtnSubscribe {
+			opacity: 1;
+		}
+	}
 }
 
 .btnSubscribe {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  background-color: rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-  z-index: 1;
-  color: var(--system-pure-white);
-  transition: color var(--transition);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 32px;
+	height: 32px;
+	background-color: rgba(0, 0, 0, 0.2);
+	border-radius: 50%;
+	z-index: 1;
+	color: var(--system-pure-white);
+	transition: color var(--transition);
 
-  &:hover {
-    color: var(--brand-accent);
-  }
+	&:hover {
+		color: var(--brand-accent);
+	}
 }
 
-.textSubscribe {
-  // display: none;
-  position: absolute;
+.textBtnSubscribe {
+	opacity: 0;
+	position: absolute;
+	white-space: nowrap;
+	padding: 0.4rem 0.8rem;
+	font-size: 1.2rem;
+	line-height: 1.6rem;
+	background-color: var(--neutrals-700);
+	border-radius: var(--border-radius-1);
+	left: 100%;
+	margin-left: 0.8rem;
+	box-shadow: var(--shadow-3);
+	color: var(--text-night-primary);
+	transition: opacity var(--transition);
+}
+
+.textBtnSubscribeRight {
+	right: 100%;
+	left: auto;
+	margin-left: 0;
+	margin-right: 0.8rem;
 }
