--- a/src/components/Stations/StationCard/StationCard.module.scss
+++ b/src/components/Stations/StationCard/StationCard.module.scss
@@ -1,143 +1,164 @@
 .cardWrapper {
-  position: relative;
-  width: 100%;
-  background-color: var(--dark-primary);
-  border-radius: var(--border-radius-2);
+	position: relative;
+	width: 100%;
+	background-color: var(--dark-primary);
+	border-radius: var(--border-radius-2);
 
-  &:hover {
+	&:hover {
+		.cardDotsVertical {
+			opacity: 1;
+			visibility: visible;
+		}
 
-    .cardDotsVertical {
-      opacity: 1;
-      visibility: visible;
-    }
+		& > .card {
+			background: rgba(255, 255, 255, 0.1);
 
-    & > .card {
-      background: rgba(255, 255, 255, .1);
+			& .cardIcon > svg > path {
+				fill: var(--neutrals-025);
+			}
+		}
 
+		& .textNew {
+			opacity: 0;
+		}
+	}
 
-      & .cardIcon > svg > path {
-        fill: var(--neutrals-025);
-      }
-    }
-  }
+	&.isActive {
+		&:hover {
+			& .card {
+				background: var(--brand-accent);
+			}
+		}
 
-  &.isActive {
-    &:hover {
-      & .card {
-        background: var(--brand-accent);
-      }
-    }
+		& .card {
+			background: var(--brand-accent);
+		}
 
-    & .card {
-      background: var(--brand-accent);
-    }
+		& .cardIcon > svg > path {
+			fill: var(--neutrals-025);
+		}
 
-    & .cardIcon > svg > path {
-      fill: var(--neutrals-025);
-    }
+		& .cardDotsVertical {
+			fill: var(--neutrals-025);
+		}
+	}
 
-    & .cardDotsVertical {
-      fill: var(--neutrals-025);
-    }
-  }
+	&.isActive.columns {
+		.cardDotsVertical {
+			opacity: 1;
+			pointer-events: all;
+			transform: translateX(0);
+			visibility: visible;
+		}
+	}
 
-  &.isActive.columns {
-    .cardDotsVertical {
-      opacity: 1;
-      pointer-events: all;
-      transform: translateX(0);
-      visibility: visible;
-    }
-  }
+	&.isActive.columns {
+		& .card {
+			&:hover {
+				background: var(--brand-accent);
+			}
+		}
+	}
 
-  &.isActive.columns {
-    & .card {
-      &:hover {
-        background: var(--brand-accent);
-      }
-    }
-  }
+	&.columns {
+		& .card {
+			flex-direction: row;
+			height: auto;
 
-  &.columns {
-    & .card {
-      flex-direction: row;
-      height: auto;
+			& .cardIcon {
+				width: 48px;
+				height: 48px;
+				margin-right: 0.8rem;
+			}
 
-      & .cardIcon {
-        width: 48px;
-        height: 48px;
-        margin-right: .8rem;
-      }
+			&:hover {
+				background-color: var(--neutrals-800);
+			}
+		}
 
-      &:hover {
-        background-color: var(--neutrals-800);
-      }
-    }
+		& .cardDotsVertical {
+			top: 2rem;
+			right: 1.4rem;
+			transform: translateX(2rem);
+			pointer-events: none;
+		}
 
-    & .cardDotsVertical {
-      top: 2rem;
-      right: 1.4rem;
-      transform: translateX(2rem);
-      pointer-events: none;
-    }
-
-    &:hover {
-      & .cardDotsVertical {
-        transform: translateX(0);
-        pointer-events: all;
-      }
-
-    }
-
-  }
+		&:hover {
+			& .cardDotsVertical {
+				transform: translateX(0);
+				pointer-events: all;
+			}
+		}
+	}
 }
 
 .card {
-  height: 16rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  padding: var(--spacing-6) var(--spacing-6) var(--spacing-5);
-  background: rgba(255, 255, 255, .07);
-  background-color: var(--neutrals-800);
-  border-radius: var(--border-radius-2);
-  transition: background var(--transition), box-shadow var(--transition);
+	height: 16rem;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-start;
+	padding: var(--spacing-6) var(--spacing-6) var(--spacing-5);
+	background: rgba(255, 255, 255, 0.07);
+	background-color: var(--neutrals-800);
+	border-radius: var(--border-radius-2);
+	transition:
+		background var(--transition),
+		box-shadow var(--transition);
 
-  &:focus {
-    box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.4);
-  }
+	&:focus {
+		box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.4);
+	}
 }
 
-
 .cardIcon {
-  width: 96px;
-  height: 96px;
+	width: 96px;
+	height: 96px;
 
-  & > svg > path {
-    fill: var(--neutrals-400);
-  }
+	& > svg > path {
+		fill: var(--neutrals-400);
+	}
 }
 
 .cardText {
-  height: 44px;
-  display: flex;
-  place-items: center;
+	height: 44px;
+	display: flex;
+	place-items: center;
 }
 
 .cardDotsVertical {
-  position: absolute;
-  top: 0.5rem;
-  right: 0.5rem;
-  visibility: hidden;
-  opacity: 0;
-  cursor: pointer;
-  transition: opacity var(--transition), transform var(--transition);
-  z-index: 2;
-  fill: var(--neutrals-400);
+	position: absolute;
+	top: 0.5rem;
+	right: 0.5rem;
+	visibility: hidden;
+	opacity: 0;
+	cursor: pointer;
+	transition:
+		opacity var(--transition),
+		transform var(--transition);
+	z-index: 2;
+	fill: var(--neutrals-400);
 
-  &:hover {
-    fill: var(--neutrals-025);
-  }
+	&:hover {
+		fill: var(--neutrals-025);
+	}
+}
+
+.textNew {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	opacity: 1;
+	display: inline-block;
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 16px;
+	color: var(--system-pure-white);
+	padding: 0.3rem 0.4rem;
+	background-color: #f91a3f;
+	border-radius: var(--border-radius-1);
+	text-transform: uppercase;
+	margin-bottom: 0.5rem;
+	transition: opacity var(--transition);
 }
